--- a/style.css
+++ b/style.css
@@ -121,10 +121,10 @@ button.start-animation {
 
 .form-control option {
   background-color: #333; /* رنگ زمینه تاریک */
-  color: white; /* رنگ متن سفید */
+  color: white; 
 }
 
 .form-control:focus {
-  outline: 2px solid #9c27b0; /* هایلایت بنفش هنگام focus */
+  outline: 2px solid #9c27b0; 
   outline-offset: 2px;
 }
